# lumina-visualizer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
ci/: postbuild.ps1
ci-logs/: pluginval.txt  status.txt
src/: Analysis.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebAssets.h
ui/: app.css  build_demo.py  index.html
ui/js/: audio.js  bridge.js  gl.js  icons.js  layout.js  main.js  media.js  palettes.js  post.js  presets.js  scenes_fractal.js  scenes_meters.js  scenes_minimal.js  scenes_motion.js  scenes_spectrum.js  scenes_texture.js  scenes_waves.js  ui.js  widgets.js
